--- a/css/materialize.css
+++ b/css/materialize.css
@@ -3440,11 +3440,11 @@ input[type=range] + .thumb {
   }
 }
 
-/*@media only screen and (min-width: 993px) {
+@media only screen and (min-width: 993px) {
   .container {
     width: 70%;
   }
-}*/
+}
 
 .container .row {
   margin-left: -0.75rem;
