--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,29 @@
+body {
+	/* BEGIN - added for sticky footer */
+    display: flex;
+    min-height: 100vh;
+    flex-direction: column;
+    /* END - added for sticky footer */
+  }
+
+main {
+	/* BEGIN - added for sticky footer */
+    flex: 1 0 auto;
+    /* END - added for sticky footer */
+}
+
+nav {
+	background-color: #81c784;
+}
+
+footer.page-footer {
+	background-color: #81c784;
+}
+
+.page-title {
+	font-size: 2rem;
+}
+
 header, main, footer {
   padding-left: 240px;
 }
@@ -6,4 +32,21 @@ header, main, footer {
   header, main, footer {
     padding-left: 0;
   }
+}
+
+/* override materialize.css default */
+@media only screen and (min-width: 993px) {
+  .container {
+    width: 85%;
+  }
+}
+
+#logo {
+	text-align: center;
+	color: white;
+	background-color: #81c784;
+	margin: 1rem 2.5rem 0rem 2.5rem;
+	font-family: Asap;
+	font-size: 2rem;
+	font-weight: bold;
 }
